--- a/k8s/kubernetes-dashboard.yaml
+++ b/k8s/kubernetes-dashboard.yaml
@@ -109,7 +109,7 @@ spec:
     spec:
       containers:
       - name: kubernetes-dashboard
-        image: k8s.gcr.io/kubernetes-dashboard-amd64:v1.10.1
+        image: rootww/kube-dashboard:v1.10.1
         ports:
         - containerPort: 8443
           protocol: TCP
@@ -155,8 +155,10 @@ metadata:
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
+  type: NodePort
   ports:
     - port: 443
       targetPort: 8443
+      nodePort:30000
   selector:
     k8s-app: kubernetes-dashboard
