--- a/k8s/heapster/heapster.yaml
+++ b/k8s/heapster/heapster.yaml
@@ -43,7 +43,7 @@ spec:
         command:
         - /heapster
         #- --source=kubernetes:https://kubernetes.default
-        - --source=kubernetes.summary_api:''
+        - --source=kubernetes.summary_api:''?useServiceAccount=true&kubeletHttps=true&kubeletPort=10250&insecure=true
         #- --sink=influxdb:http://monitoring-influxdb.kube-system.svc:8086
         livenessProbe:
           httpGet:
