--- a/k8s/tomcat/tomcat_svc.yaml
+++ b/k8s/tomcat/tomcat_svc.yaml
@@ -6,8 +6,10 @@ metadata:
   name: kube-tomcat
   namespace: default
 spec:
+  type: NodePort
   ports:
   - port: 8080
     targetPort: 8080
+    nodePort: 8080
   selector:
     app: kube-tomcat
