--- a/k8s/dashboard/kubernetes-dashboard.yaml
+++ b/k8s/dashboard/kubernetes-dashboard.yaml
@@ -90,7 +90,7 @@ subjects:
 # ------------------- Dashboard Deployment ------------------- #
 
 kind: Deployment
-apiVersion: apps/v1
+apiVersion: apps/v1beta2
 metadata:
   labels:
     k8s-app: kubernetes-dashboard
