--- a/k8s/tomcat/tomcat_deployment.yaml
+++ b/k8s/tomcat/tomcat_deployment.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
       - name: kube-tomcat
-        image: rootww/tomcat8
+        image: rootww/tomcat:8.5.41-jdk8-apline
         volumeMounts:
         - mountPath: /opt/tomcat/webapps
           name: www
