--- a/zabbix/redis/userparameter_redis.conf
+++ b/zabbix/redis/userparameter_redis.conf
@@ -1,4 +1,4 @@
-#redis
+#redis监控配置文件，以下的路径需要根据实际情况修改。
 #discovery
 UserParameter=redis.discovery,/apps/application/zabbix/scripts/redis_discovery_status.sh discovery
 #redis status
