--- a/k8s/redis/redis_deployment_pvc.yaml
+++ b/k8s/redis/redis_deployment_pvc.yaml
@@ -1,1 +1,35 @@
-
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: kube-redis
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: kube-redis
+    spec:
+      containers:
+      - name: kube-redis
+        image: rootww/redis
+        volumeMounts:
+        - mountPath: /opt/redis/data
+          name: redis-data
+      restartPolicy: Always
+      volumes:
+        - name: redis-data
+          persistentVolumeClaim:
+            claimName: redis-data
+---
+kind: PersistentVolumeClaim
+apiVersion: v1
+metadata:
+  name: redis-data
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 500Mi
