--- a/k8s/redis/redis_statefulset_pvc.yaml
+++ b/k8s/redis/redis_statefulset_pvc.yaml
@@ -12,6 +12,9 @@ spec:
       containers:
       - name: kube-redis
         image: rootww/redis
+        env:
+          - name: REDIS_RUN_MODE
+            value: "cluster"
         volumeMounts:
         - mountPath: /opt/redis/data
           name: redis-data
