--- a/k8s/redis/redis_statefulset_pvc.yaml
+++ b/k8s/redis/redis_statefulset_pvc.yaml
@@ -27,7 +27,7 @@ spec:
   - metadata:
       name: redis-data
       annotations:
-        volume.beta.kubernetes.io/storage-class: "anything"
+        volume.beta.kubernetes.io/storage-class: "managed-nfs-storage"
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
