--- a/k8s/zookeeper/zk-my-statefulset.yaml
+++ b/k8s/zookeeper/zk-my-statefulset.yaml
@@ -73,6 +73,22 @@ spec:
           name: server
         - containerPort: 3888
           name: leader-election
+        readinessProbe:
+          exec:
+            command:
+            - sh
+            - -c
+            - "zookeeper-ready 2181"
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
+        livenessProbe:
+          exec:
+            command:
+            - sh
+            - -c
+            - "zookeeper-ready 2181"
+          initialDelaySeconds: 10
+          timeoutSeconds: 5
         volumeMounts:
         - name: zookeeper-datadir
           mountPath: /opt/zookeeper/data
