--- a/k8s/tomcat/tomcat_deployment.yaml
+++ b/k8s/tomcat/tomcat_deployment.yaml
@@ -1,17 +1,30 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: kube-tomcat
+  name: tomcat
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: kube-tomcat
+        app: tomcat
     spec:
       containers:
-      - name: kube-tomcat
+      - name: tomcat
         image: rootww/tomcat:8.5.41-jdk8-apline
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 120
+          timeoutSeconds: 10
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 8080
+          initialDelaySeconds: 60
+          timeoutSeconds: 10
+          periodSeconds: 5
         volumeMounts:
         - mountPath: /opt/tomcat/webapps
           name: www
