修改redis监控模板

--- a/zabbix/redis/userparameter_redis.conf
+++ b/zabbix/redis/userparameter_redis.conf
@@ -1,5 +1,5 @@
 #redis监控配置文件，以下的路径需要根据实际情况修改。
 #discovery
-UserParameter=redis.discovery,/apps/application/zabbix/scripts/redis_discovery_status.sh discovery
+UserParameter=redis.discovery,/etc/zabbix/zabbix_agentd.d/redis_discovery_status.sh discovery
 #redis status
-UserParameter=redis.status[*],/apps/application/zabbix/scripts/redis_discovery_status.sh status $1 $2
+UserParameter=redis.status[*],/etc/zabbix/zabbix_agentd.d/redis_discovery_status.sh $1 $2
