添加ELK相关问题

--- a/elk/logstash_kafka2elastic.conf
+++ b/elk/logstash_kafka2elastic.conf
@@ -10,13 +10,24 @@ input
         decorate_events => true
     }
 }
+	
+filter
+{
+	ruby
+    {
+        code => "event.set('index_time',event.timestamp.time.localtime.strftime('%Y-%m-%d'))"
+    }
+}
 
 output
 {
     elasticsearch
     {
         hosts => ["192.168.1.103:9200","192.168.1.104:9200","192.168.1.105:9200"]
-        index => "%{[topic]}-%{+YYYY-MM-dd}"
+        manage_template => false
+        template_name => "logstash"
+        template_overwrite => true
+        index => "%{[topic]}-%{index_time}"
         user => "elastic"
         password => "*****"
         timeout => 300
