修复部分错误

--- a/k8s/elasticsearch/elasticsearch_statefulset.yaml
+++ b/k8s/elasticsearch/elasticsearch_statefulset.yaml
@@ -17,16 +17,15 @@ spec:
       - name: es-cluster
         env:
           - name: ES_CLUSTER_HOSTS
-            value: es-cluster-0.es-discovery,es-cluster-1.es-discovery,es-cluster-2.es-discovery
+            value: es-cluster-0,es-cluster-1,es-cluster-2
           - name: ES_CLUSTER_NAME
             value: es-cluster
           - name: POD_NAME
             valueFrom:
               fieldRef:
-                apiVersion: v1
                 fieldPath: metadata.name
           - name: ES_NODE_NAME
-            value: $(POD_NAME)
+            value: ${POD_NAME｝
         image: 10.255.50.25:9090/tyacc_dev/elasticsearch:6.8.11
         imagePullPolicy: Always
         volumeMounts:
