--- a/zabbix/java/userparameter_java.conf
+++ b/zabbix/java/userparameter_java.conf
@@ -1,3 +1,3 @@
 #java
-UserParameter=java.status[*],/etc/zabbix/zabbix_agentd.d/java-program-status.sh $1 $2 $3
-UserParameter=java.discovery,/etc/zabbix/zabbix_agentd.d/java-program-discovery.sh
+UserParameter=java.status[*],sudo /etc/zabbix/zabbix_agentd.d/java-program-status.sh $1 $2 $3
+UserParameter=java.discovery,sudo /etc/zabbix/zabbix_agentd.d/java-program-discovery.sh
