--- a/script/inotify-tools+rsync/sersync/etc/sersync.conf
+++ b/script/inotify-tools+rsync/sersync/etc/sersync.conf
@@ -21,6 +21,8 @@ real_time_sync_enable=1
 full_rsync_enable=1
 #全量同步周期单位d
 full_rsync_interval=15
+#全量同步超时时间单位h
+full_rsync_timeout=12
 #rsyncd模块与监听目录备份关系，格式[模式名=监听目录,监听目录]一个模式可以对应多个待同步目录逗号
 #分隔，要求模式名称唯一，一个带同步目录只能对应一个模块，否则第一个生效。
 rsyncd_mod=('backup1=/data/file,/data/db' 'backup2=/data/img')
@@ -34,4 +36,6 @@ rsync_passwd_file=/etc/rsync.passwd
 rsync_timeout=180
 #传输限速
 rsync_bwlimit=50M
+#rsync额外参数
+extra_rsync_args="--ignore-missing-args"
 ######################################同步配置######################################
