添加默认参数

--- a/script/inotify-tools+rsync/sersync/etc/sersync.conf
+++ b/script/inotify-tools+rsync/sersync/etc/sersync.conf
@@ -37,5 +37,5 @@ rsync_timeout=180
 #传输限速
 rsync_bwlimit=50M
 #rsync额外参数
-extra_rsync_args="--ignore-missing-args"
+extra_rsync_args="--partial --append-verify --ignore-missing-args"
 ######################################同步配置######################################
