--- a/script/inotify-tools+rsync/sersync/etc/sersync.conf
+++ b/script/inotify-tools+rsync/sersync/etc/sersync.conf
@@ -17,6 +17,8 @@ listen_dir=('file_backup=/data/file' 'db_backup=/data/db' 'img_backup=/data/img'
 full_rsync_first_enable=1
 #实时同步配置
 real_time_sync_enable=1
+#实时同步延时s
+real_time_sync_delay=60
 #周期性全量同步
 full_rsync_enable=1
 #全量同步周期单位d
