--- a/script/inotify-tools+rsync/Dockerfile
+++ b/script/inotify-tools+rsync/Dockerfile
@@ -9,7 +9,7 @@ ENV PATH=$PATH:/usr/local/sersync/bin
 RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list && \
     chmod -R +x /usr/local/sersync/bin/* && \
     ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
-    apt-get update \
+    apt-get update && \
     apt-get install -y rsync inotify-tools && \
     apt-get clean all
 
