--- a/script/inotify-tools+rsync/Dockerfile
+++ b/script/inotify-tools+rsync/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:11
+FROM ubuntu:20.04
 
 ADD sersync/ /usr/local/sersync
 
@@ -6,7 +6,7 @@ ADD docker-entrypoint.sh /usr/local/sersync/bin
 
 ENV PATH=$PATH:/usr/local/sersync/bin
 
-RUN sed -i 's/deb.debian.org/mirrors.ustc.edu.cn/g' /etc/apt/sources.list && \
+RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.list && \
     chmod -R +x /usr/local/sersync/bin/* && \
     ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     apt-get update && \
