--- a/script/inotify-tools+rsync/Dockerfile
+++ b/script/inotify-tools+rsync/Dockerfile
@@ -10,7 +10,8 @@ RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.l
     chmod -R +x /usr/local/sersync/bin/* && \
     ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     apt-get update && \
-    apt-get install -y rsync inotify-tools && \
+    apt-get install -y rsync inotify-tools openssh-server && \
+    echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
     apt-get clean all
 
 ENTRYPOINT ["docker-entrypoint.sh"]
