--- a/script/inotify-tools+rsync/Dockerfile
+++ b/script/inotify-tools+rsync/Dockerfile
@@ -11,7 +11,7 @@ RUN sed -i 's@//.*archive.ubuntu.com@//mirrors.ustc.edu.cn@g' /etc/apt/sources.l
     ln -snf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     apt-get update && \
     apt-get install -y rsync inotify-tools openssh-server && \
-    echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
+    echo "PermitRootLogin yes" >> /etc/ssh/sshd_config && \
     apt-get clean all
 
 ENTRYPOINT ["docker-entrypoint.sh"]
