--- a/script/inotify-tools+rsync/sersync/etc/sersync.conf
+++ b/script/inotify-tools+rsync/sersync/etc/sersync.conf
@@ -54,7 +54,7 @@ rsync_timeout=180
 rsync_bwlimit=50M
 
 #rsync额外参数，建议开启--partial、--append-verify、--ignore-missing-args，当前已开启必要参数
-#-rlptDRu --delete
+#-rlptDR --delete
 extra_rsync_args="-v --partial --append-verify --ignore-missing-args"
 
 #保留多少天内的历史备份(单位d)，防止误删源文件导致数据丢失，备份目录为rsynd模块下/history-backup/，
